# krarkode

./: .gitattributes  .gitignore  .prettierignore  .vscodeignore  AGENTS.md  CHANGELOG.md  README.cn.md  README.md  eslint.config.mjs  package.json  pixi.toml  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  tsconfig.webview.json  vite.config.ts  vite.dataexplorer.config.ts  vite.plotviewer.config.ts  vite.variables.config.ts  vitest.config.mts
.github/workflows/: ci.yml  release.yml
ark-sidecar/: Cargo.toml
ark-sidecar/src/: commands.rs  connection.rs  handlers.rs  heartbeat.rs  logging.rs  main.rs  protocol.rs  types.rs
ark-sidecar/src/console/: completer.rs  highlighter.rs  history.rs  kernel_loop.rs  mod.rs  output.rs  r_parser.rs  reedline_loop.rs  validator.rs
ark-sidecar/src/lsp_client/: completion.rs  document.rs  mod.rs  position.rs  transport.rs  virtual_document.rs
dev-docs/: new-ark-plugin.md  rmd-impl.md
docs/: architecture.md  design.md
html/help/: help.html  welcome.html
html/plotViewer/: index.ts  style.css  tsconfig.json
resources/: data_explorer.json  sidecar_events.json
resources/scripts/: json-serializer.R
scripts/: ark-sidecar-lsp-test.js  build-data-explorer.mjs  build-webview-static.mjs  build.mjs  data-explorer-bundle-smoke.mjs  download-ark.mjs  generate-data-explorer-types.mjs  generate-sidecar-event-types.mjs  package-full.mjs  prepare-test-dist.mjs  stage-sidecar.mjs
src/: configurationWatcher.ts  context.ts  doctor.ts  extension.ts  rBinaryResolver.ts  util.ts  vite-env.d.ts
syntaxes/: r.tmLanguage.json
(+133 files in other folders)
