[package]
name = "vscode-r-ark-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
gethostname = "1.1"
nu-ansi-term = "0.50"
once_cell = "1.19"
reedline = { version = "0.46", features = ["sqlite", "idle_callback", "external_printer"] }
runtimelib = { version = "0.30.2", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.24"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "95aff097aa927a66bb357f715b58cde821be8867" }
uuid = { version = "1.7", features = ["v4"] }
lsp-types = "0.97"
zeromq = "0.5.0-pre"
